--- a/docker/image-musician/Dockerfile
+++ b/docker/image-musician/Dockerfile
@@ -7,6 +7,7 @@ MAINTAINER Doriane Kaffo <doriane.tedongmokaffo@heig-vd.ch>
 COPY src /opt/musician/
 
 WORKDIR /opt/musician/
-RUN npm install 
+RUN npm install
+RUN npm install uuid --save
 
 ENTRYPOINT ["node", "/opt/musician/musician.js"]
