--- a/docker/image-auditor/src/package.json
+++ b/docker/image-auditor/src/package.json
@@ -1,7 +1,6 @@
 {
   "name": "src",
   "version": "1.0.0",
-  "description": "",
   "main": "auditor.js",
   "dependencies": {
     "hashmap": "^2.3.0",
@@ -12,5 +11,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Doriane",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
