--- a/docker/image-musician/src/package.json
+++ b/docker/image-musician/src/package.json
@@ -1,7 +1,6 @@
 {
   "name": "src",
   "version": "1.0.0",
-  "description": "",
   "main": "musician.js",
   "dependencies": {
     "uuid": "^3.2.1"
@@ -11,5 +10,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Doriane",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
